# EL_reasoning_assigment

./: .gitignore  EL_Reasoner.py  README.md  custom_graph  custom_graph.py  custom_graph_old_version.py  example.py  pyproject.toml  reasoner_Floor.py  requirements.txt  setup.py  tbox_conversion.py  test_general.py  test_tbox_conversion.py
EL_reasoner/: EL_Reasoner.py  custom_graph.py  resources.py  rules.py  subsumption_algorithm.py
ELreasoner/: custom_graph.py  reasoner.py  resources.py  rules.py  subsumption_algorithm.py  tbox_conversion.py
analysis/: comparisons_amino_acids.ipynb  comparisons_diseases.ipynb
old_versions_backup/: EL_Reasoner_original.py  example.py  resources.py  rules.py
report/: main.tex  refs.bib  tablesbackup.tex
src/ELreasoner/: Sushi23_11.owl  reasoner.py  reasonerCLI.py  rules.py  subsumption_algorithm.py  tbox_conversion.py
tests/: test_general.py
